# tool-asta

./: CMakeLists.txt  README.MD  package.xml
scripts/: .gitignore  .nuitrack_bridge.py.swp  activate_nuitrack.py  detect_gestures.py  gesture_creator.py  gesture_detector.py  helper.py  joints.py  python_version.py  save_manager.py  skeleton_converter.py  test.py  test_rospy.py
scripts/recorded_poses/: egyptian.json  heart.json  hips.json  mime.json  relaxed.json  robot.json  touching.json  tpose.json  up.json
