<?xml version="1.0"?>
<package format="2">
  <name>skeleton_converter</name>
  <version>0.0.1</version>
  <description>The skeleton_converter package</description>
  <maintainer email="p.kostic.8@gmail.com">Predrag Kostic</maintainer>
  <license>GPLv3</license>
  <url type="repository">https://github.com/pkostic-dev/script-skeleton-converter</url>
  <author email="p.kostic.8@gmail.com">Predrag Kostic</author>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>tf</exec_depend>

  <!-- For custom messages -->
  <!-- <build_depend>message_generation</build_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>message_runtime</exec_depend> -->

  <export>
  </export>
</package>
